--- a/docroot/sites/all/themes/ambitious/css/styles.css
+++ b/docroot/sites/all/themes/ambitious/css/styles.css
@@ -536,3 +536,20 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+/* line 146, ../sass/styles.scss */
+.easy-breadcrumb {
+  text-align: right;
+  padding: 45px 12px 0 0;
+  color: #ffffff;
+}
+/* line 154, ../sass/styles.scss */
+.easy-breadcrumb a:visited {
+  color: #ffffff;
+}
+@media (max-width: 767px) {
+  /* line 146, ../sass/styles.scss */
+  .easy-breadcrumb {
+    display: none;
+  }
+}
