--- a/docroot/sites/all/themes/ambitious/sass/issue-fixing.scss
+++ b/docroot/sites/all/themes/ambitious/sass/issue-fixing.scss
@@ -42,11 +42,11 @@
 			margin-right: 10px;	
 		}
 		&.btn{
-			padding: 11px 16px;
+			padding: 11px 25px;
 		}
 		&.btn-right{
 			position: relative;
-			right: 85px;
+			right: 9px;
 			@include breakpoint($mobile){
 				right: 0;
 			}
@@ -62,6 +62,10 @@
 
 	}
 	@include breakpoint($mobile){
+
+		.slider-block{
+			margin-top: -116px;
+		}
 		
 		.slider-container .signup-columns .col{
 			width: 100%;
@@ -73,8 +77,7 @@
 			width: 100%;
 		}
 		
-		.slider-block .block{
-			margin-top: -116px;
+		.slider-block .block{			
 			padding: 10px 15px 85px;
 			margin-bottom: 38px;
 			@include box-shadow(0 2px 2px rgba(0,0,0,0.3));					
